# Drivers plugins

add_subdirectory(BillAcceptor)
add_subdirectory(BillDispensers)
add_subdirectory(CardReader)
add_subdirectory(CoinAcceptor)
add_subdirectory(FR)
add_subdirectory(HID)
add_subdirectory(IOPort)
add_subdirectory(Modem)
add_subdirectory(Printer)
add_subdirectory(VirtualDevices)
add_subdirectory(Watchdog)
